@@ -136,18 +136,14 @@ border="0" hspace="0" vspace="0"></a>
 <?php decoration_window_end(); ?>
 
 <!-- ============================================================ -->
-<?php decoration_window_start("By Coji Morishita (8 images)", "", "", 0); ?>
+<?php decoration_window_start("By Felix E. Klee (7 images)", "", "", 0); ?>
 
 <p class=centered>
-<a href="<?php echo conv_link_target('logos/Coji_Morishita/index.php');
-?>" class="nohilight"><img src="logos/Coji_Morishita/fvwm_sbanner_blue.png"
-border="0" hspace="0" vspace="0"></a>
-
-<p class=centered>
-<a href="<?php echo conv_link_target('logos/Coji_Morishita/index.php');
-?>" class="nohilight"><img src="logos/Coji_Morishita/fvwm_sym_logo.png"
+<a href="<?php echo conv_link_target('logos/Felix_E_Klee/index.php');
+?>" class="nohilight"><img src="logos/Felix_E_Klee/logos-overview.png"
 border="0" hspace="0" vspace="0"></a>
 
 <?php decoration_window_end(); ?>
+
 
 <p>Return to <a href="<?php echo conv_link_target('index.php');?>">index</a>.</p>
