@@ -1,5 +1,8 @@
 2003-06-01  Uwe Pross  <uwe.pross@gmx.net>
 
+	* logo-competition/logos/Felix_E_Klee/index.php: 
+	Added logos by Felix E. Klee
+
 	* web-theme/classes/birthday_class.inc: 
 	* web-theme/classes/default_class.inc:
 	* web-theme/themes/plain_theme.inc:
